Modified index.html file, added a line.

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
   </head>
   <body>
     <p> The following static HTML webpage is written to demostrate usage of git, and GitHub. </p>
+    <p> Added content for another git commit </p>
   </body>
 </html>
