Added a greeting while someone visits the page.

--- a/index.html
+++ b/index.html
@@ -10,4 +10,5 @@
     <p> The following static HTML webpage is written to demostrate usage of git, and GitHub. </p>
     <p> Added content for another git commit </p>
   </body>
+  <script src="main.js"></script>
 </html>
